Branch responsive, corregido la visualización en tablet - celular. Se corrigió de nuevo la plantilla del blog

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-GHOST_API= https://guillermoc.herokuapp.com/ghost/api/v3/content/posts/?key=3bfebac555974de42cba6deeef
+GHOST_API= https://guillermocv.herokuapp.com/ghost/api/v3/content/posts/?key=a7f68537947da5d4630c5f211a
